--- a/game.html
+++ b/game.html
@@ -6,7 +6,9 @@
     <link href='http://fonts.googleapis.com/css?family=Electrolize' rel='stylesheet' type='text/css'>
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="Javascripts/main.js"></script>
+    <!-- <script type="text/javascript" src="Javascripts/main.js"></script> -->
+    <script type="text/javascript" src="Javascripts/general.js"></script>
+    <script type="text/javascript" src="Javascripts/spaceinvaders.js"></script>
 </head>
 <body>
 
