--- a/game.html
+++ b/game.html
@@ -6,7 +6,6 @@
     <link href='http://fonts.googleapis.com/css?family=Electrolize' rel='stylesheet' type='text/css'>
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <!-- <script type="text/javascript" src="Javascripts/main.js"></script> -->
     <script type="text/javascript" src="Javascripts/general.js"></script>
     <script type="text/javascript" src="Javascripts/spaceinvaders.js"></script>
 </head>
@@ -26,8 +25,8 @@
             </div>
             
 
-            <div class="me-container">
-                <div class="me"></div>
+            <div class="defender-container">
+                <div class="defender"></div>
             </div>
         </div>
     </div> <!-- end of div.container -->
