Added shot sound, new variables for position

--- a/game.html
+++ b/game.html
@@ -31,5 +31,7 @@
         </div>
     </div> <!-- end of div.container -->
 
+    <audio id="defenderGunShot" src="Sounds/laser.mp3" preload="auto"></audio>
+
 </body>
 </html>
