--- a/game.html
+++ b/game.html
@@ -32,6 +32,8 @@
     </div> <!-- end of div.container -->
 
     <audio id="defenderGunShot" src="Sounds/laser.mp3" preload="auto"></audio>
+    <audio id="noise" src="Sounds/horror.mp3" preload="auto"></audio>
+    <audio id="goodShot" src="Sounds/R2D2.mp3" preload="auto"></audio>
 
 </body>
 </html>
