Added scores and lives counter

--- a/game.html
+++ b/game.html
@@ -15,7 +15,10 @@
         <header>
             <div id="score">
                 Your score:
-            <span>< ></span>
+            <span class="score">0</span>
+            </div>
+            <div id="lives">
+                <span class="lives">3</span>
             </div>
         </header>
 
@@ -32,7 +35,7 @@
     </div> <!-- end of div.container -->
 
     <audio id="defenderGunShot" src="Sounds/laser.mp3" preload="auto"></audio>
-    <audio id="noise" src="Sounds/horror.mp3" preload="auto"></audio>
+    <audio id="noise" src="Sounds/horror.mp3" preload="auto" autoplay loop></audio>
     <audio id="goodShot" src="Sounds/R2D2.mp3" preload="auto"></audio>
 
 </body>
